# kdb-db-ml

./: README.md  fh.q  fmincg.q  funq.q  ml.q  porter.q  rte.q  rte_pykx.q  sim.q  stat.q  tick.q  tick.sh  train_nn.q  usdeur_model_with_hidden.onnx  ut.q  weights.csv
data/: FX_data.csv
models/: dummy-baseline.onnx  dummy-deep.onnx  dummy-input_heavy.onnx  dummy-wide.onnx  usdeur_model_no_hidden.onnx  weights.csv  weights_baseline.csv  weights_deep.csv  weights_input.csv
onnx_q/: .gitignore  Makefile  README.md  example.onnx  example.q  k.h
onnx_q_bin/: Makefile  README.md  benchmark.q  bindings.q  example.q  onnx_q.cpp
python/: README.md  benchmark.py  create.py  model.py  pyproject.toml
q/: benchmark.q  train_nn.q
tick/: r.q  rte_ff.q  rte_pykx_ff.q  rte_pykx_lstm.q  sym.q
