[project]
name = "kdb-db-ml-python-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ruff>=0.14.9",
]
